<resources>
    <string name="app_name">Calculator</string>
    <string name="result">%1$.2s %2$s %3$.2s \n = %4$.2f</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="del">Del</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sum">+</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>