<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="false"
    android:textDirection="firstStrongRtl"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/textview_border"
        android:gravity="bottom|end"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:text="@string/zero"
        android:textDirection="firstStrong"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toBottomOf="@+id/screen">

        <Button
            android:id="@+id/erase"
            style="@style/test"
            android:text="@string/ac"/>

        <Button
            android:id="@+id/delete"
            style="@style/test"
            android:text="@string/del"/>


        <Button
            android:id="@+id/percent"
            style="@style/test"
            android:text="@string/percentage"/>

        <Button
            android:id="@+id/division"
            style="@style/test"
            android:text="@string/division"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <Button
            android:id="@+id/seven"
            style="@style/numbers"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/eight"
            style="@style/numbers"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/nine"
            style="@style/numbers"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/multiplication"
            style="@style/test"
            android:text="@string/multiplication"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toBottomOf="@+id/line2">

        <Button
            android:id="@+id/four"
            style="@style/numbers"
            android:text="@string/four"/>

        <Button
            android:id="@+id/five"
            style="@style/numbers"
            android:text="@string/five"/>

        <Button
            android:id="@+id/six"
            style="@style/numbers"
            android:text="@string/six"/>

        <Button
            android:id="@+id/minus"
            style="@style/test"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toBottomOf="@+id/line3">

        <Button
            android:id="@+id/one"
            style="@style/numbers"
            android:text="@string/one"/>

        <Button
            android:id="@+id/two"
            style="@style/numbers"
            android:text="@string/two"/>

        <Button
            android:id="@+id/three"
            style="@style/numbers"
            android:text="@string/three"/>

        <Button
            android:id="@+id/sum"
            style="@style/test"
            android:text="@string/sum"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        app:layout_constraintTop_toBottomOf="@+id/line4">

        <Button
            android:id="@+id/undefined"
            style="@style/test"
            android:text="Null"/>

        <Button
            android:id="@+id/zero"
            style="@style/numbers"
            android:text="@string/zero"/>

        <Button
            android:id="@+id/dot"
            style="@style/numbersPageTwo"
            android:text="@string/dot"/>

        <Button
            android:id="@+id/equal"
            style="@style/test"
            android:text="@string/equal"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>